--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -20,14 +20,3 @@ nav {
   z-index: 100;
   border-top: 0;
 }
-/* .content {
-  padding: 16px;
-}
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-.sticky + .content {
-  padding-top: 60px;
-} */
